# c2cgeoportal

./: .bandit  .bandit.yaml  .config  .coveragerc  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .prospector-pre-commit.yaml  .prospector-test.yaml  .prospector.yaml  .pylintrc  .python-version  .secretsignore  .snyk  .sonarcloud.properties  .tool-versions  .travis.yml  .travis.yml_disabled  AGENTS.md  BACKPORT_TODO  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Dockerfile.mako  Jenkinsfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  (+56 more)
admin/: .coveragerc  .env  .gitignore  .snyk  Dockerfile  MANIFEST.in  Makefile  README.md  README.txt  alembic.ini  config.yaml  development.ini  docker-compose.yaml  docker-compose.yml  docker.ini  init-db.sh  lingva.cfg  npm-cv2-ignore  npm-cve-ignore  npm-cwe-ignore  package-lock.json  package.json  production.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.ini  tests.ini.mako  tests.ini.tmpl
admin/acceptance_tests/: __init__.py  conftest.py  edit_url_test.py  functionalities_test.py  home_test.py  initializedb.py  interface_test.py  layer_groups_test.py  layers_v1_test.py  layers_wms_test.py  layers_wmts_test.py  layertree_test.py  learn_test.jinja2  learn_test.py  left_menu_test.py  main_test.py  metadatas_test.py  ogc_servers_test.py  restriction_areas_test.py  role_test.py  test.jinja2  test_users.py  themes_ordering.py  themes_test.py  user_test.py
admin/acceptance_tests/selenium/: page.py
admin/alembic/: env.py
admin/apache/: apache.conf  c2cgeoportal_admin.wsgi
admin/c2cgeoportal_admin/: __init__.py  cache_tween.py  routes.py  subscribers.py  tests.py  widgets.py
admin/c2cgeoportal_admin/lib/: lingua_extractor.py  lingva_extractor.py  ogcserver_synchronizer.py
admin/c2cgeoportal_admin/schemas/: dimension.py  map.py  (+9 more)
admin/docker/: demo-dump.sql  docker-entrypoint.sh
admin/tests/: __init__.py  conftest.py  test_edit_url.py  test_functionalities.py  test_home.py  test_interface.py  test_layer_groups.py  test_layers_cog.py  test_layers_v1.py  test_layers_vectortiles.py  test_layers_wms.py  test_layers_wmts.py  test_layertree.py  test_learn.jinja2  test_learn.py  test_left_menu.py  test_lingua_extractor_config.py  test_lingva_extractor_config.py  test_logs.py  test_main.py  test_metadatas.py  test_oauth2_clients.py  test_ogc_servers.py  test_restriction_areas.py  test_role.py  test_themes.py  test_themes_ordering.py  test_treegroup.py  test_user.py  tests.ini.tmpl  tests.yaml  themes_ordering.py
commons/: .dockerignore  .gitignore  CHANGELOG.rst  Dockerfile  Dockerfile.mako  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  alembic.ini  alembic.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tests.ini  tests.yaml.mako
commons/acceptance_tests/: __init__.py  conftest.py  initializedb.py  test_roles.py  test_users.py
commons/c2cgeoportal_commons/: __init__.py  config.py
commons/c2cgeoportal_commons.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
commons/tests/: conftest.py  interface_test.py  roles_test.py  test_get_url.py  test_roles.py  test_users.py  tests.ini  tests.yaml.tmpl  validators_test.py
doc/: .snyk  Dockerfile  Makefile  Pipfile  build.sh  builddoc.rst  conf.py  eval-templates  import_ngeo_config.py  index.rst  index.rst.mako  index.rst.tmpl  package-lock.json  package.json  pyproject.toml  releasenotes.rst  requirements.txt  update_online.sh
doc/_static/: .gitignore
doc/administrator/: administrate.rst  administrate.rst.mako  administrate.rst.tmpl  database.rst  deploy.rst  editing.rst  index.rst  infrastructure_notice.rst  install.rst  mapfile.rst  raster.rst  tinyows.rst  wmstime.rst
doc/developer/: bootstrap.rst  build_release.rst  build_release.rst.mako  build_release.rst.tmpl  cache.rst  client_side.rst  client_side.rst.mako  database.dia  database.eps  debugging.rst  development_procedure.rst  docker.dia  documentation_infrastructure.rst  index.rst  ngeo.rst  principles.rst  python_package_infrastructure.rst  python_packaging.rst  server_side.rst  server_side.rst.mako  server_side.rst.tmpl  transifex.rst  webservices.rst
doc/integrator/: admin_interface.rst  api.rst  authentication.rst  authentication_oauth2.rst  authentication_oidc.rst  backend.rst  backend_arcgis.rst  backend_geoserver.rst  backend_qgis.rst  build.rst  c2cwsgiutils.rst  caching.rst  cgxp.rst  cgxp.rst.mako  checker.rst  cluster.rst  configuration.rst  create_application.rst  create_application.rst.mako  create_application.rst.tmpl  customise.rst  customize_ui.rst  database.rst  deploy.rst  docker-apache.dia  docker-openshift.dia  docker.dia  docker.rst  editing.rst  editing.rst.mako  extend_application.rst  extend_data_model.rst  features.rst  features.rst.mako  filter.rst  filter.rst.mako  filter.rst.tmpl  fulltext_search.rst  fulltext_search.rst.mako  functionalities.rst  (+64 more)
docker/qgisserver/: .dockerignore  .prospector.yaml  .pylintrc  .snyk  Dockerfile  Dockerfile32  Makefile  Pipfile  README.md  __init__.py  accesscontrol.py  docker-compose.yaml  logging.ini  pip-cve-ignore  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
geoportal/: .dockerignore  .snyk  Dockerfile  Dockerfile.mako  MANIFEST.in  README.md  npm-cve-ignore  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
geoportal/c2cgeoportal_geoportal/: __init__.py  models.py  resources.py
geoportal/tests/: .pylintrc  __init__.py  config.yaml  pylntrc  test_cachebuster.py  test_caching.py  test_checker.py  test_decimaljson.py  test_echoview.py  test_entry.py  test_export.py  test_functionalities.py  test_get_url.py  test_headerstween.py  test_i18n.py  test_init.py  test_lib.py  test_locale_negociator.py  test_mapserverproxy_route_predicate.py  test_ogcproxy_route_predicate.py  test_raster.py  test_subscribers.py  test_wmstparsing.py  xmlstr.py
(+3453 files in other folders)
