[tool.ruff]
target-version = "py312"
line-length = 110
fix = true

[tool.ruff.lint]
select = []
ignore = ["ANN401", "ARG005", "B904", "BLE001", "C90", "COM812", "D100", "D102", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "E722", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX001", "FIX002", "I001", "N806", "PERF203", "PLR09", "PLR2004", "PTH", "Q000", "S101", "S110", "S113", "S603", "S607", "SIM105", "T201", "TD001", "TD002", "TD003", "TRY003", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "ASYNC", "B904", "BLE001", "D", "DTZ", "E722", "E741", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "PT009", "PT027", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/tests/**" = ["ANN", "ARG", "ASYNC", "B904", "BLE001", "D", "DTZ", "E722", "E741", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "PT009", "PT027", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/test_*.py" = ["ANN", "ARG", "ASYNC", "B904", "BLE001", "D", "DTZ", "E722", "E741", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "PT009", "PT027", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/*_test.py" = ["ANN", "ARG", "ASYNC", "B904", "BLE001", "D", "DTZ", "E722", "E741", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "PT009", "PT027", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]

[tool.ruff.lint.isort]
known-third-party = ["c2cwsgiutils", "c2cgeoform"]
known-first-party = ["c2cgeoportal_commons", "c2cgeoportal_geoportal", "c2cgeoportal_admin", "geomapfish_qgisserver"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
alembic = "1.17.2" # geoportal
"c2c.template" = "2.4.2" # geoportal
c2cgeoform = "2.5.0" # commons
colander = "2.0" # commons, admin
ColanderAlchemy = "0.3.4" # commons
cookiecutter = "2.6.0" # geoportal
deform = "2.0.15" # commons, admin
defusedxml = "0.7.1" # geoportal
"dogpile.cache" = "1.5.0" # geoportal
Fiona = "1.10.1" # geoportal raster
GeoAlchemy2 = "0.18.1" # commons, geoportal
geojson = "3.2.0" # geoportal
getitfixed = "1.0.29" # geoportal
isodate = "0.7.2" # geoportal
Mako = "1.3.10" # geoportal
OWSLib = "0.35.0" # geoportal
papyrus = "2.6.2" # commons, geoportal
passwordgenerator = "1.5.1" # geoportal
psycopg2 = "2.9.11" # geoportal
pycryptodome = "3.23.0" # geoportal
pyproj = "3.7.2" # admin, other?
pyotp = "2.9.0" # geoportal
pyramid = "2.0.2" # geoportal
pyramid_debugtoolbar = "4.12.1" # geoportal
pyramid-jinja2 = "2.10.1" # admin
pyramid_mako = "1.1.0" # geoportal
pyramid_multiauth = "1.0.2" # geoportal
pyramid_tm = "2.6" # geoportal
python-dateutil = "2.9.0.post0" # geoportal
PyYAML = "6.0.1" # geoportal
rasterio = "1.5.0" # geoportal raster
requests = "2.32.5" # geoportal
redis = "7.1.0" # geoportal cache
Shapely = "2.1.2" # geoportal
SQLAlchemy = "2.0.46"
transaction = "5.0" # commons, geoportal
translationstring = "1.4" # admin
"zope.event" = "6.1" # commons, geoportal
c2cwsgiutils = { version = "6.1.9", extras = ["broadcast", "standard", "oauth2", "debug"] }
oauthlib = "3.3.1"
tilecloud = "1.13.5" # geoportal
azure-storage-blob = "12.28.0"
simple_openid_connect = '2.3.2' # geoportal
pkce = '1.0.3' # geoportal
basicauth = "1.0.0"
prospector = { version = "1.18.0", extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.11.0"
prospector-profile-utils  = "1.26.5"
ruff = "0.15.0"
beautifulsoup4 = "4.14.3"
certifi = "2026.1.4"
cryptography = "46.0.4"
setuptools = "80.10.2"

[tool.poetry.group.dev.dependencies]
Babel = "2.18.0" # i18n
beautifulsoup4 = "4.14.3" # admin tests
Jinja2 = "3.1.6" # c2c.template
lingva = "5.0.6" # i18n
PasteScript = "3.7.0" # geoportal pcreate
polib = "1.2.0" # i18n
pykwalify = "1.8.0" # Validate config
pytest = "9.0.2" # tests
pytest-asyncio = "1.3.0" # tests
WebTest = "3.0.7" # admin tests
types-pytz = "2025.2.0.20251108"
types-pyyaml = "6.0.12.20250915"
types-python-dateutil = "2.9.0.20260124"
types-requests = "2.*"
types-setuptools = "80.10.0.20260124"
mappyfile = "1.1.1"
mapbox-vector-tile = "2.2.0"
responses = "0.25.8"
waitress = "3.0.2"
boto3 = "1.42.40"
# Used on upgrade
pre-commit = "4.5.1"
prek = "0.3.1"
# To be able to upgrade project from version <= 2.8
c2cciutils = { version = "1.5.14", extras = ["checks"] }

[project]
name = "c2cgeoportal"
version = "0.0.0"
description = "Not used"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dynamic = ["dependencies", "version"]
requires-python = ">=3.12"
