[tool.poetry]
name = 'c2cgeoportal'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
alabaster = "1.0.0" # theme
Pygments = "2.19.2"
Sphinx = "8.2.3"
sphinx-prompt = "1.10.2"
sphinx-jsonschema = "1.19.2"
sphinx-argparse = "0.5.2"
Sphinx-Substitution-Extensions = { extras = ["prompt"], version = "2025.12.15" }
sphinxcontrib-mermaid = "1.2.3"
c2cwsgiutils = ">=6.0.0.dev148"
tilecloud-chain = "1.23.1"
boto3 = { version = "1.42.19", optional = true }
