[tool.black]
line-length = 110
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 110

[tool.poetry]
name = 'c2cgeoportal'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
alabaster = "1.0.0" # theme
Pygments = "2.20.0"
Sphinx = "8.1.3"
sphinx-prompt = "1.9.0"
sphinx-jsonschema = "1.19.2"
sphinx-argparse = "0.5.2"
Sphinx-Substitution-Extensions = { extras = ["prompt"], version = "2024.10.17" }
sphinxcontrib-mermaid = "1.0.0"
c2cwsgiutils = ">=6.0.0.dev148"
tilecloud-chain = "1.21.0"
boto3 = { version = "1.35.99", optional = true }
jinja2 = "3.1.6"
cryptography = "47.0.0"
requests = "2.33.0"
urllib3 = "2.6.3"
azure-core = "1.38.2"
pillow = "12.2.0"
pyjwt = "2.12.1"
ujson = "5.12.0"
mako = "1.3.11"
