[tool.ruff]
target-version = 'py310'

[tool.poetry]
name = 'c2cgeoportal'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
c2cwsgiutils = { extras = ["broadcast"], version = "6.1.7" }
papyrus = "2.6.2" # commons
transaction = "5.0" # commons
"c2c.template" = "2.4.2"
GeoAlchemy2 = "0.18.0"
SQLAlchemy = "2.0.43" # commons
"zope.event" = "5.1.1" # commons
"zope.sqlalchemy" = "3.1" # commons
shapely = "2.1.1"
cee-syslog-handler = "0.6.0"
psycopg2 = "2.9.10"
pytz = "2025.2"

[tool.poetry.dev-dependencies]
prospector = { version = "1.17.3", extras = ["with_mypy", "with_bandit", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils  = "1.25.0"
ruff = "0.12.8"
types-pyyaml = "6.0.12.20250809"
pytest = "8.4.1"
