[tool.ruff]
target-version = 'py310'

[tool.poetry]
name = 'c2cgeoportal'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
c2cwsgiutils = { extras = ["broadcast"], version = "6.1.9" }
papyrus = "2.6.2" # commons
transaction = "5.0" # commons
"c2c.template" = "2.4.2"
GeoAlchemy2 = "0.18.1"
SQLAlchemy = "2.0.45" # commons
"zope.event" = "6.1" # commons
"zope.sqlalchemy" = "4.1" # commons
shapely = "2.1.2"
cee-syslog-handler = "0.6.0"
psycopg2 = "2.9.11"
pytz = "2025.2"

[tool.poetry.dev-dependencies]
prospector = { version = "1.17.3", extras = ["with_mypy", "with_bandit", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils  = "1.26.5"
ruff = "0.14.10"
types-pyyaml = "6.0.12.20250915"
pytest = "9.0.2"
