[tool.ruff]
target-version = 'py310'

[tool.poetry.dependencies]
python = ">=3.10,<4"
c2cwsgiutils = { extras = ["broadcast"], version = "6.1.9" }
papyrus = "2.6.2" # commons
transaction = "5.1" # commons
"c2c.template" = "2.5.0"
GeoAlchemy2 = "0.20.0"
SQLAlchemy = "2.0.51" # commons
"zope.event" = "6.2" # commons
"zope.sqlalchemy" = "4.1" # commons
shapely = "2.1.2"
cee-syslog-handler = "0.6.0"
psycopg2 = "2.9.12"
crypt-r = {version = "3.13.1", python = ">=3.13"}
pytz = "2026.2"

[tool.poetry.dev-dependencies]
prospector = { version = "1.19.0", extras = ["with_mypy", "with_bandit", "with_ruff"] }
prospector-profile-duplicated = "1.12.0"
prospector-profile-utils  = "1.27.0"
ruff = "0.15.19"
types-pyyaml = "6.0.12.20260518"
pytest = "9.1.1"

[project]
name = 'c2cgeoportal'
version = '0.0.0'
description = 'Not used'
authors = []
